syntax = "proto3";

package server;

import "TestDetails.proto";

option java_package = "com.fluentbuild.apollo.work";
option java_outer_classname = "GetTestDetailsResponseProto";

message GetTestDetailsResponse {
    reports.TestDetails details = 1;
}
